--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
-    repositories {
+    /*repositories {
         google()
         mavenCentral()
-    }
-    /*dependencies {
+    }*/
+    dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.41"
-    }*/
+    }
 }
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
