--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,12 @@ buildscript {
         google()
         mavenCentral()
     }*/
+    ext{
+        composeVersion = '1.1.1'
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         classpath("com.google.dagger:hilt-android-gradle-plugin:2.41")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2")
     }
